@@ -313,7 +313,7 @@ zxid_a7n* zxid_mk_user_a7n_to_sp(zxid_conf* cf, zxid_ses* ses, const char* uid, 
   at_stmt = zx_NEW_sa_AttributeStatement(cf->ctx);
   at_stmt->Attribute = zxid_mk_attribute(cf, "zxididp", ZXID_REL " " ZXID_COMPILE_DATE);
 
-  if (cf->fedusername_suffix && *cf->fedusername_suffix) {
+  if (cf->fedusername_suffix && cf->fedusername_suffix[0]) {
     snprintf(buf, sizeof(buf), "%.*s@%s", nameid->gg.content->len, nameid->gg.content->s, cf->fedusername_suffix);
     at = zxid_mk_attribute(cf, "fedusername", zx_dup_cstr(cf->ctx, buf));
     ZX_NEXT(at) = (void*)at_stmt->Attribute;
